# linear-diffusion

./: pyproject.toml  requirements.txt  testing.ipynb
