[tool.poetry]
name = "linear-diffusion"
version = "0.1.0"
description = ""
authors = ["noahkarsky <noah.karsky8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mnist = "^0.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
